# flask-notes-app

./: .gitignore  pyproject.toml
website/: __init__.py  auth.py  database.db  models.py  views.py
website/templates/: base.html  login.html  register.html
