[tool.poetry]
name = "flask-notes-app"
version = "0.1.0"
description = ""
authors = ["Gustavo Passarella <gustavo.passarella@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-login = "^0.6.3"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
